Made new activity for signing up a new user. Also made a method for adding new user in the DbConnecter. The shit works perfectly on first try ggwp.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_login_handler">LoginHandler</string>
     <string name="title_activity_main_menu_handler">MainMenuHandler</string>
     <string name="title_activity_db_connecter">DbConnecter</string>
+    <string name="title_activity_signup_handler">SignupHandler</string>
 </resources>
