--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main_menu_handler">MainMenuHandler</string>
     <string name="title_activity_db_connecter">DbConnecter</string>
     <string name="title_activity_signup_handler">SignupHandler</string>
+    <string name="title_activity_view_workout_handler">ViewWorkoutHandler</string>
 </resources>
